--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -89,9 +89,9 @@
     </div>
     <div class="container gallery-container">
 
-        <h1>Destacados de cada plataforma</h1>
+        <h1 style="margin-top: -17px;padding-top: 20px;">Destacados de cada plataforma</h1>
 
-        <p class="page-description text-center" style="font-size: x-large;"> NINTENDO</p>
+        <a href="Exclusivo Nintendo/nintendo.html" ><p class="page-description" style="font-size: x-large;">NINTENDO</p></a>
 
         <div class="tz-gallery">
 
