web services terminado

--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -86,7 +86,7 @@
                     distancia. ¿A qué esperas para explorar?</h5>
             </div>
         </div><br>
-    </div>
+    
     <div class="container gallery-container">
 
         <h1 style="margin-top: -17px;padding-top: 20px;">Destacados de cada plataforma</h1>
@@ -181,7 +181,11 @@
 
             </DIV>
         </DIV>
-    </DIV>
+</DIV><br>
+<p style="text-align: center;background-color: #ffffff;;" ><a href="webServices.html" >🢂🢂🢂¿Quieres ver los días festivos para poder jugar?🢀🢀🢀</a></p><br><br><br>
+
+</div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
     <script>
@@ -196,7 +200,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-</body>
+
 </body>
 
 </html>
