--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -86,105 +86,114 @@
                     distancia. ¿A qué esperas para explorar?</h5>
             </div>
         </div><br>
-    
-    <div class="container gallery-container">
 
-        <h1 style="margin-top: -17px;padding-top: 20px;">Destacados de cada plataforma</h1>
+        <div class="container gallery-container">
 
-        <a href="Exclusivo Nintendo/nintendo.html" ><p class="page-description" style="font-size: x-large;">NINTENDO</p></a>
+            <h1 style="margin-top: -17px;padding-top: 20px;">Destacados de cada plataforma</h1>
 
-        <div class="tz-gallery">
-
-            <div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/NINTENDO/animal-crossing.jpg">
-                        <img src="img/NINTENDO/animal-crossing.jpg" alt="Park">
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="img/NINTENDO/ARMS.jpg">
-                        <img src="img/NINTENDO/ARMS.jpg" alt="Bridge">
-                    </a>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                    <a class="lightbox" href="img/NINTENDO/bayonetta-2.jpg">
-                        <img src="img/NINTENDO/bayonetta-2.jpg" alt="Tunnel">
-                    </a>
-                </div>
-            </DIV>
-            <p class="page-description text-center" style="font-size: x-large;" hr>XBOX</p>
-            <div class="tz-gallery">
-
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/XBOX/A PLAGUE TALE.jpeg">
-                            <img src="img/XBOX/A PLAGUE TALE.jpeg" alt="Coast">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/XBOX/forza motorsport.jpeg">
-                            <img src="img/XBOX/forza motorsport.jpeg" alt="Rails">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/XBOX/DESTINY.jpg">
-                            <img src="img/XBOX/DESTINY.jpg" alt="Traffic">
-                        </a>
-                    </div>
-                </DIV>
-            </DIV>
-            <p class="page-description text-center" style="font-size: x-large;">PC</p>
-            <div class="tz-gallery">
-
-                <div class="row">
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/PC/BattleTech.png">
-                            <img src="img/PC/BattleTech.png" alt="Rocks">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/PC/Black Mesa.jpg">
-                            <img src="img/PC/Black Mesa.jpg" alt="Benches">
-                        </a>
-                    </div>
-                    <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/PC/Crusader Kings III.jpg">
-                            <img src="img/PC/Crusader Kings III.jpg" alt="Sky">
-                        </a>
-                    </DIV>
-                </DIV>
-            </DIV>
-            <p class="page-description text-center" style="font-size: x-large;"> PLAYSTATION</p>
+            <a href="Exclusivo Nintendo/nintendo.html">
+                <p class="page-description" style="font-size: x-large;">NINTENDO</p>
+            </a>
 
             <div class="tz-gallery">
 
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/PLAYSTATION/batman arkham knight.jpeg">
-                            <img src="img/PLAYSTATION/batman arkham knight.jpeg" alt="Park">
+                        <a class="lightbox" href="img/NINTENDO/animal-crossing.jpg">
+                            <img src="img/NINTENDO/animal-crossing.jpg" alt="Park">
                         </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <a class="lightbox" href="img/PLAYSTATION/biomutant.jpeg">
-                            <img src="img/PLAYSTATION/biomutant.jpeg" alt="Bridge">
+                        <a class="lightbox" href="img/NINTENDO/ARMS.jpg">
+                            <img src="img/NINTENDO/ARMS.jpg" alt="Bridge">
                         </a>
                     </div>
                     <div class="col-sm-12 col-md-4">
-                        <a class="lightbox" href="img/PLAYSTATION/chronos before the ashes.jpeg">
-                            <img src="img/PLAYSTATION/chronos before the ashes.jpeg" alt="Tunnel">
+                        <a class="lightbox" href="img/NINTENDO/bayonetta-2.jpg">
+                            <img src="img/NINTENDO/bayonetta-2.jpg" alt="Tunnel">
                         </a>
                     </div>
                 </DIV>
+                <a href="Exclusivo Xbox/xbox.html">
+                    <p class="page-description" style="font-size: x-large;">XBOX</p>
+                </a>
+                <div class="tz-gallery">
+
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/XBOX/A PLAGUE TALE.jpeg">
+                                <img src="img/XBOX/A PLAGUE TALE.jpeg" alt="Coast">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/XBOX/forza motorsport.jpeg">
+                                <img src="img/XBOX/forza motorsport.jpeg" alt="forza">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/XBOX/DESTINY.jpg">
+                                <img src="img/XBOX/DESTINY.jpg" alt="DESTINY">
+                            </a>
+                        </div>
+                    </DIV>
+                </DIV>
+                <a href="Exclusivo PC/pc.html">
+                    <p class="page-description" style="font-size: x-large;">PC</p>
+                </a>
+                <div class="tz-gallery">
+
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/PC/BattleTech.png">
+                                <img src="img/PC/BattleTech.png" alt="battle">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/PC/Black Mesa.jpg">
+                                <img src="img/PC/Black Mesa.jpg" alt="Black">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/PC/Crusader Kings III.jpg">
+                                <img src="img/PC/Crusader Kings III.jpg" alt="Crusader">
+                            </a>
+                        </DIV>
+                    </DIV>
+                </DIV>
+                <a href="Exclusivo Play/playstation.html">
+                    <p class="page-description" style="font-size: x-large;">PLAYSTATION</p>
+                </a>
+
+                <div class="tz-gallery">
+
+                    <div class="row">
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/PLAYSTATION/batman arkham knight.jpeg">
+                                <img src="img/PLAYSTATION/batman arkham knight.jpeg" alt="batman">
+                            </a>
+                        </div>
+                        <div class="col-sm-6 col-md-4">
+                            <a class="lightbox" href="img/PLAYSTATION/biomutant.jpeg">
+                                <img src="img/PLAYSTATION/biomutant.jpeg" alt="biomutant">
+                            </a>
+                        </div>
+                        <div class="col-sm-12 col-md-4">
+                            <a class="lightbox" href="img/PLAYSTATION/chronos before the ashes.jpeg">
+                                <img src="img/PLAYSTATION/chronos before the ashes.jpeg" alt="before">
+                            </a>
+                        </div>
+                    </DIV>
 
 
 
 
+                </DIV>
             </DIV>
-        </DIV>
-</DIV><br>
-<p style="text-align: center;background-color: #ffffff;;" ><a href="webServices.html" >🢂🢂🢂¿Quieres ver los días festivos para poder jugar?🢀🢀🢀</a></p><br><br><br>
+        </DIV><br>
+        <p style="text-align: center;background-color: #ffffff;;"><a href="webServices.html">🢂🢂🢂¿Quieres saber el
+                porque los días son festivos?🢀🢀🢀</a></p><br><br><br>
 
-</div>
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.js"></script>
@@ -200,7 +209,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-
+</body>
 </body>
 
 </html>
