--- a/PROYECTO SEMESTRAL/AgregarJuego.html
+++ b/PROYECTO SEMESTRAL/AgregarJuego.html
@@ -84,8 +84,8 @@
                       <label for="">Plataformas disponibles</label>
                     </div>
                     <div class="grupo">
-                      <input type="url" name="" id="TrailerJ"><span class="barra" ></span>
-                      <label for="">Trailer</label>
+                      <input type="text" name="" id="TrailerJ"><span class="barra" ></span>
+                      <label for="">Links</label>
                     </div>
                     <div class="grupo">
                       <label for="exampleFormControlFile1">Seleccione foto de perfil</label>
