--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/nintendo.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/nintendo.html
@@ -72,29 +72,29 @@
         <br><br><div class="row">
             <div class="col-md-3 col-sm-6 centrar "><a class="cuN1" href="../Exclusivo Nintendo/ANIMAL CROSSING.html" ><img src="../img/NINTENDO/animal-crossing.jpg"  alt="sin imagen" class="img"><br><p class="letraN">ANIMAL CROSSING</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/ARMS.html" ><img src="../img/NINTENDO/ARMS.jpg"  alt="sin imagen" class="img"><br><p class="letraN">ARMS</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/BAYONETTA 2.html" ><img src="../img/NINTENDO/bayonetta-2.jpg"  alt="sin imagen" class="img" width="350" height="280"><br><p class="letraN">BAYONETTA 2</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/DONKEY KONG COUNTRY.html" ><img src="../img/NINTENDO/Donkey kong country.webp"  alt="sin imagen" class="img"><br><p class="letraN">DONKEY KONG COUNTRY</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/BAYONETTA 2.html" ><img src="../img/NINTENDO/bayonetta-2.jpg"  alt="sin imagen" class="img" ><br><p class="letraN">BAYONETTA 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/DONKEY KONG COUNTRY.html" ><img src="../img/NINTENDO/Donkey kong country.jpg"  alt="sin imagen" class="img"><br><p class="letraN">DONKEY KONG COUNTRY</p></a></div>
         </div><br><br>
 
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/FIRE EMBLEM WARRIORS.html" ><img src="../img/NINTENDO/fire_emblem_warriors.jpg"  alt="sin imagen" class="img"><br><p class="letraN">FIRE EMBLEM WARRIORS</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html" ><img src="../img/NINTENDO/legend-zelda-breath-wild.webp"  alt="sin imagen" class="img"><br><p class="letraN">LEGEND ZELDA BREATH WILD</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MARIO KART 8.html" ><img src="../img/NINTENDO/mario-kart-8-deluxe.webp"  alt="sin imagen" class="img"><br><p class="letraN">MARIO KART 8</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html" ><img src="../img/NINTENDO/fire_emblem_warriors.jpg"  alt="sin imagen" class="img"><br><p class="letraN">LEGEND ZELDA BREATH WILD</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MARIO KART 8.html" ><img src="../img/NINTENDO/mario-kart-8-deluxe.jpg"  alt="sin imagen" class="img"><br><p class="letraN">MARIO KART 8</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MARIO Y SONIC TOKIO.html" ><img src="../img/NINTENDO/mario-y-sonic-jjoo-tokio.jpg"  alt="sin imagen" class="img"><br><p class="letraN">MARIO Y SONIC TOKIO</p></a></div>
         </div><br>
 
         <div class="row">
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/METROID.html" ><img src="../img/NINTENDO/Metroid prime.jpg"  alt="sin imagen" class="img" width="300" height="300"><br><p class="letraN">METROID</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MONSTER HUNTER RISE.html" ><img src="../img/NINTENDO/MONSTER HUNTER RISE.webp"  alt="sin imagen" class="img"><br><p class="letraN">MONSTER HUNTER RISE</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html" ><img src="../img/NINTENDO/pokemon-lets-go-pikachu.jpg"  alt="sin imagen" class="img" width="300" height="280"><br><p class="letraN">POKEMON LETS GO PIKACHU</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/SPLATOON 2.html" ><img src="../img/NINTENDO/splatoon_2.webp"  alt="sin imagen" class="img"><p class="letraN">SPLATOON 2</p><br></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/METROID.html" ><img src="../img/NINTENDO/Metroid prime.jpg"  alt="sin imagen" class="img" ><br><p class="letraN">METROID</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MONSTER HUNTER RISE.html" ><img src="../img/NINTENDO/MONSTER HUNTER RISE.jpg"  alt="sin imagen" class="img"><br><p class="letraN">MONSTER HUNTER RISE</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/POKEMON LETS GO PIKACHU.html" ><img src="../img/NINTENDO/pokemon-lets-go-pikachu.jpg"  alt="sin imagen" class="img" ><br><p class="letraN">POKEMON LETS GO PIKACHU</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/SPLATOON 2.html" ><img src="../img/NINTENDO/splatoon_2.jpg"  alt="sin imagen" class="img"><p class="letraN">SPLATOON 2</p><br></a></div>
         </div><br><br> 
 
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/STORY OF SEASONS.html" ><img src="../img/NINTENDO/STORY OF SEASONS.jpg"  alt="sin imagen" class="img"><br><p class="letraN">STORY OF SEASONS</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/MARIO PARTY.html" ><img src="../img/NINTENDO/super-mario-party.jpg"  alt="sin imagen" class="img"><br><p class="letraN">MARIO PARTY</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/SUPER SMASH BROS.html" ><img src="../img/NINTENDO/Super-smash-bros.jpg"  alt="sin imagen" class="img"><br><p class="letraN">SUPER SMASH BROS</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/XENOBLADE CHRONICLES 2.html" ><img src="../img/NINTENDO/xenoblade-chronicles-2.jpg"  alt="sin imagen" class="img" width="300" height="300"><br><p class="letraN">XENOBLADE CHRONICLES 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a  class="cuN1" href="../Exclusivo Nintendo/XENOBLADE CHRONICLES 2.html" ><img src="../img/NINTENDO/xenoblade-chronicles-2.jpg"  alt="sin imagen" class="img" ><br><p class="letraN">XENOBLADE CHRONICLES 2</p></a></div>
         </div><br><br>
         
 
