--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -92,7 +92,7 @@
             <h1 style="margin-top: -17px;padding-top: 20px;">Destacados de cada plataforma</h1>
 
             <a href="Exclusivo Nintendo/nintendo.html">
-                <p class="page-description" style="font-size: x-large;">NINTENDO</p>
+                <p class="page-description" style="font-size: x-large;background-color: rgba(253, 2, 2, 0.815);color: rgb(0, 0, 0);">NINTENDO</p>
             </a>
 
             <div class="tz-gallery">
@@ -115,7 +115,7 @@
                     </div>
                 </DIV>
                 <a href="Exclusivo Xbox/xbox.html">
-                    <p class="page-description" style="font-size: x-large;">XBOX</p>
+                    <p class="page-description" style="font-size: x-large;background-color: rgba(0, 95, 51, 0.815);color: rgb(0, 0, 0);">XBOX</p>
                 </a>
                 <div class="tz-gallery">
 
@@ -138,7 +138,7 @@
                     </DIV>
                 </DIV>
                 <a href="Exclusivo PC/pc.html">
-                    <p class="page-description" style="font-size: x-large;">PC</p>
+                    <p class="page-description" style="font-size: x-large;background-color: rgba(131, 24, 180, 0.719);color: rgb(0, 0, 0);">PC</p>
                 </a>
                 <div class="tz-gallery">
 
@@ -161,7 +161,7 @@
                     </DIV>
                 </DIV>
                 <a href="Exclusivo Play/playstation.html">
-                    <p class="page-description" style="font-size: x-large;">PLAYSTATION</p>
+                    <p class="page-description" style="font-size: x-large;background-color: rgba(10, 42, 148, 0.815);color: rgb(0, 0, 0);">PLAYSTATION</p>
                 </a>
 
                 <div class="tz-gallery">
