--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html
@@ -65,7 +65,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/Donkey kong country.webp" alt="sin imagen"><H4 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">DONKEY KONG COUNTRY</H4>
+            <img class="img" src="../img/NINTENDO/Donkey kong country.jpg" alt="sin imagen"><H4 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">DONKEY KONG COUNTRY</H4>
            </div>
            <div class="col-md-8 col-sm-12" style="margin-top: 7%;">
             <table class="table-responsive" >
