--- a/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html
@@ -66,7 +66,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/counter strike.webp" alt="sin imagen"><h2 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">CS:GO</h2>
+            <img class="img" src="../img/PC/counter strike.jpg" alt="sin imagen"><h2 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">CS:GO</h2>
            </div>
            <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
