--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/SPLATOON 2.html
@@ -65,7 +65,7 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/NINTENDO/splatoon_2.webp" alt="sin imagen"><H2 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">SPLATOON 2</H2>
+            <img class="img" src="../img/NINTENDO/splatoon_2.jpg" alt="sin imagen"><H2 class="letraVJ , centrar" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%;">SPLATOON 2</H2>
            </div>
            <div class="col-md-8 col-sm-12" style="margin-top: 7%;">
             <table class="table-responsive" >
