--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html
@@ -65,7 +65,7 @@
   
           <div class="row">
              <div class="col-md-4 col-sm-12">
-              <img class="img" src="../img/XBOX/gears5.jfif" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">GEARS 5</H2>
+              <img class="img" src="../img/XBOX/gears5.jpg" alt="sin imagen"><H2 class="centrar letraVJ" style="background-color: rgba(255, 255, 255, 0.9); margin-right: 29%; ">GEARS 5</H2>
              </div>
              <div class="col-md-8 col-sm-12" >
             <table class="table-responsive" >
