--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -81,7 +81,7 @@
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/LEFT 4 DEAD.html" ><img src="../img/XBOX/LEFT 4 DEAD.JPG"  alt="sin imagen" class="img"><br><p class="letraX">LEFT 4 DEAD</p></a> </div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/GEARS OF WAR 4.html" ><img src="../img/XBOX/GEARS OF WAR 4.jpg"  alt="sin imagen" class="img"><br><p class="letraX">GEARS OF WAR 4</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/MINECRAFT.html" ><img src="../img/XBOX/MINECRAFT.jpg"  alt="sin imagen" class="img"><br><p class="letraX">MINECRAFT</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/GEARS 5.html" ><img src="../img/XBOX/gears5.jfif"  alt="sin imagen" class="img"><br><p class="letraX">GEARS 5</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/GEARS 5.html" ><img src="../img/XBOX/gears5.jpg"  alt="sin imagen" class="img"><br><p class="letraX">GEARS 5</p></a></div>
         </div><br><br>
 
         <div class="row">
