--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -107,7 +107,7 @@
 
                     <div class="form-group">
                         <label for="exampleFormControlFile1" class="letraLo , cu"><h4>Seleccione una foto de perfil</h4></label>
-                        <h5><input type="file" class="form-control-file , letraLo , cu1" id="exampleFormControlFile1"></h5>
+                        <h5><input accept="image/png,image/jpeg" type="file" class="form-control-file , letraLo , cu1" id="exampleFormControlFile1"></h5>
                       </div><br>
                     <div class="row">
                       <div class="col-md-6">
