--- a/PROYECTO SEMESTRAL/AgregarJuego.html
+++ b/PROYECTO SEMESTRAL/AgregarJuego.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="grupo">
                       <label for="exampleFormControlFile1">Seleccione foto de perfil</label>
-                      <input type="file" class="barra" id="SeleccioneJ">
+                      <input accept="image/png,image/jpeg" type="file" class="barra" id="SeleccioneJ">
                     </div>  
         <div class="col-md-3 col-sm-3"></div>
               <div class="row">
